[project]
name = "Researcher multi agent"
version = "0.1.0"
description = "A multi-agent system for research and writing tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.15.1",
    "crewai-tools>=1.15.1",
    "dotenv>=0.9.9",
    "litellm>=1.91.0",
    "python-dotenv>=1.2.2",
]
